[tool.poetry]
name = "timebox"
version = "0.4.0"
description = "Menu bar utility app (macOS) adding timeboxing functionality to Things 3."
authors = ["Camillo Visini <c.visini@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rumps = "^0.3.0"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
